# hpc

./: .env.sh  .gitignore  .mise.sh  README.md  README.mdt  git.md  init.sh  package.json  upgrade.sh
coffee/: about.md  dist.sh  new.sh
coffee/_tmpl/: README.mdt  package.json
coffee/hpcmod/: README.md  README.mdt  package.json
coffee/hpcmod/src/: hpcmod.coffee  mod.coffee
coffee/ireq/: README.md  README.mdt  package.json
coffee/ireq/src/: lib.js
coffee/ireq/test/: main.coffee
coffee/minifyjs/: mod.js  package.json  test.js
coffee/rust2proto/: README.md  README.mdt  package.json
coffee/rust2proto/src/: FuncId.coffee  UpCamel.coffee  allType.coffee  crateFuncName.coffee  crateProto.coffee  gen.coffee  genArgs.coffee  genRs.coffee  genRt.coffee  jsType.coffee  lib.coffee  mod.coffee  modName.coffee  protoType.coffee  rsSave.coffee  rustTypeToProtobufType.coffee  struct2str.coffee
coffee/rust2proto/test/: main.coffee
coffee/svelte-com/: README.md  dev.sh  package.json
coffee/svelte-com/src/: _stylus.js  comJs.js  lib.js  minifyCss.coffee  pug.js  stylus.js  svelteCustomElement.js
coffee/svelte-com/test/: pug.coffee
doc/: 01_design.md  01_proto.md  02_rust.md  03_header.md  04_extract.md  05_batch.md  06_db.md  07_proto.md  08_axum.md  09_stylus.md  10_captcha.md  11_auth.md  12_i18n.md
rust/: Cargo.toml  README.md  cargo.dist.sh  test.sh
rust/_tmpl/: Cargo.toml  README.md  README.mdt
rust/_tmpl/src/: lib.rs
rust/apierr/: Cargo.toml
rust/apierr/src/: err.rs  lib.rs
rust/apierr/tests/: main.rs
rust/captcha_verify/: Cargo.toml
rust/captcha_verify/src/: lib.rs
rust/cookie_b/: Cargo.toml  README.md  README.mdt
rust/cookie_b/src/: lib.rs
rust/cookie_b/tests/: main.rs
rust/ctx_/: Cargo.toml  README.md  README.mdt
rust/ctx_/src/: async.rs  captcha.rs  cookie.rs  lib.rs  set_header.rs  sync.rs  user.rs
rust/ctx_/tests/: main.rs
rust/hpc/: Cargo.toml  README.md  README.mdt
rust/hpc/src/: captcha.rs  cors.rs  header.rs  hpc.rs  lib.rs
rust/hpc/src/call/: batch.rs  call_err.rs  mod.rs  one.rs  run.rs
rust/hpc_captcha/: Cargo.toml  README.md  README.mdt
rust/hpc_captcha/src/: lib.rs
rust/hpc_captcha/tests/: main.rs
rust/iat/: Cargo.toml
rust/iat/src/: lib.rs
rust/icall/: Cargo.toml  README.md  README.mdt  gen.local.sh  testProto.coffee
rust/icall/proto/: _.pb.js  _.proto  lib.js
rust/icall/src/: lib.rs  proto.rs
rust/icall/src/err/: code.rs  json.rs  mod.rs  state.rs
rust/icall/tests/: main.rs
rust/ih/: Cargo.toml  README.md  README.mdt  dist.sh  gen.sh  minify.coffee  testProto.coffee
rust/ih/proto/: _.pb.js  _.proto  lib.js
rust/ih/src/: lib.rs  proto.rs
rust/ih/src/err/: bin.rs  code_li.rs  json.rs  mod.rs
rust/ih/tests/: main.rs
rust/pbc/: Cargo.toml  README.md  README.mdt  test.sh
rust/pbc/src/: lib.rs  main.rs
rust/pbc/tests/: .gitignore
rust/pbc/tests/proto/: captcha.proto
rust/req_/: Cargo.toml  README.md  README.mdt
rust/req_/src/: async.rs  captcha.rs  cookie.rs  lib.rs  set_header.rs  sync.rs  user.rs
rust/req_/tests/: main.rs
rust/sh/: upgrade.sh
sh/: gitMd.coffee
