[workspace]
members = [
  "pbc",
  "hpc",
  "iat",
  "ih",
  "_tmpl",
  "hpc_captcha",
  "cookie_b",
  "captcha_verify",
  "ctx_",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
debug-assertions = false
# panic = 'abort'
# strip = false

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
