[package]
name = "_tmpl"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/hpc.git"
homepage = "https://github.com/i18n-site/hpc/tree/dev/rust/_tmpl"
description = "_tmpl"
keywords = [ ]

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg", "docsrs" ]
all-features = true

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.3"
tracing = "0.1.41"
