[features]
default = [ ]
user = [
"dep:xkv",
"dep:ub64",
"dep:intbin",
"dep:cookie_b",
"dep:xbin"
]
cookie = [ "dep:cookie" ]
set_header = [ "dep:append-only-vec" ]
captcha = [ "dep:captcha_verify", "dep:hpc_captcha" ]

[dependencies]
aok = "0.1.17"
dashmap = "6.1.0"
http = "1.3.1"
parking_lot = "0.12.3"
xerr = "0.1.15"
tracing = "0.1.41"

[dependencies.cookie]
version = "0.18.1"
optional = true

[dependencies.append-only-vec]
version = "0.1.7"
optional = true

[dependencies.bumpalo]
version = "3.17.0"

[dependencies.xkv]
version = "0.1.44"
features = [ "r" ]
optional = true

[dependencies.tokio]
version = "1.44.1"
features = [ "sync", "macros", "test-util" ]

[dependencies.captcha_verify]
version = "0.1.4"
path = "../captcha_verify"
optional = true

[dependencies.ih]
version = "0.1.15"
path = "../ih"

[dependencies.hpc_captcha]
version = "0.1.4"
path = "../hpc_captcha"
optional = true

[dependencies.ub64]
version = "0.1.11"
optional = true

[dependencies.intbin]
version = "0.1.2"
optional = true

[dependencies.cookie_b]
version = "0.1.19"
path = "../cookie_b"
optional = true

[dependencies.xbin]
version = "0.1.6"
optional = true

[package]
name = "ctx_"
version = "0.1.8"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/hpc.git"
homepage = "https://github.com/i18n-site/hpc/tree/dev/rust/ctx_"
description = "Extract message form headers only once for one req ( support async and sync ) / 一个请求只提取一次消息, 支持异步和同步"
keywords = [ "bumpalo", "headers", "http", "req" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.3"
tracing = "0.1.41"
