[package]
name = "hpc"
version = "0.1.18"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/hpc.git"
homepage = "https://github.com/i18n-site/hpc/tree/dev/rust/hpc"
description = "http protobuf call"

[features]
default = ["srv"]
srv = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
tracing = "0.1.41"
aok = "0.1.17"
tokio = { version = "1.43.0", features = [
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
] }
axum = { version = "0.8.1" }
futures = "0.3.31"
pb-jelly = "0.0.17"
icall = { version = "0.1.10", path = "../icall" }
req_ = { version = "0.1.29", features = ["set_header"] }
xerr = "0.1.15"
cost_time = "0.1.2"

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.3"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.43.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]