[package]
name = "hpc"
version = "0.1.48"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/hpc.git"
homepage = "https://github.com/i18n-site/hpc/tree/dev/rust/hpc"
description = "http protobuf call"

[package.metadata.docs.rs]
all-features = true

[features]
default = [ "srv" ]
srv = [ ]

[dependencies]
tracing = "0.1.41"
aok = "0.1.17"
futures = "0.3.31"
pb-jelly = "0.0.17"
xerr = "0.1.15"
cost_time = "0.1.2"
axum_layer = "0.1.11"

[dependencies.tokio]
version = "1.43.0"
features = [ "macros", "net", "rt", "rt-multi-thread" ]

[dependencies.axum]
version = "0.8.1"

[dependencies.ih]
version = "0.1.15"
path = "../ih"

[dependencies.ctx_]
version = "0.1.8"
features = [ "set_header" ]
path = "../ctx_"

[dependencies.hpc_captcha]
version = "0.1.4"
path = "../hpc_captcha"

[dependencies.cookie_b]
version = "0.1.19"
path = "../cookie_b"

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.3"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.43.0"
features = [ "macros", "rt", "rt-multi-thread", "time", "sync" ]
