[package]
name = "hpc_captcha"
version = "0.1.4"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/hpc.git"
homepage = "https://github.com/i18n-site/hpc/tree/dev/rust/hpc_captcha"
description = "hpc_captcha"
keywords = [ ]

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg", "docsrs" ]
all-features = true

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.3"
tracing = "0.1.41"

[dependencies]
aok = "0.1.17"

[dependencies.ih]
version = "0.1.15"
path = "../ih"
