[package]
name = "icall"
version = "0.1.13"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/hpc.git"
homepage = "https://github.com/i18n-site/hpc/tree/dev/rust/icall"
description = "icall"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
aok = "0.1.15"
lazy_static = "1.5.0"
pb-jelly = "0.0.17"

[dev-dependencies]
aok = "0.1.15"
loginit = "0.1.13"
static_init = "1.0.3"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.43.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[package.metadata.cargo-machete]
ignored = ["lazy_static"]